--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="To Do List Web App" />
+
+    <!-- Icons -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" sizes="180x180" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="%PUBLIC_URL%/android-chrome-192x192.png" sizes="192x192" />
+    <link rel="icon" href="%PUBLIC_URL%/android-chrome-512x512.png" sizes="512x512" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!-- Add Bootstrap CSS from CDN -->
     <link 
       rel="stylesheet" 
@@ -18,6 +22,7 @@
       integrity="sha384-jcUMec3sK3eUjI8hlYoWevv9AkPeqv3jfdrttD+8i62R0Z9BQxpexa10+R6kt9dR" 
       crossorigin="anonymous"
     />
+
     <!-- Font Awesome -->
     <link 
       rel="stylesheet" 
@@ -26,6 +31,7 @@
       crossorigin="anonymous" 
       referrerpolicy="no-referrer" 
     />
+    
     <title>To Do</title>
   </head>
   <body>
